# research-graph

./: .gitignore  README.md  pyproject.toml
src/research_graph/: clients.py  config.py  config.yaml  context.py  main.py
src/research_graph/orchestration/: runner.py
src/research_graph/pipelines/: authors_pipeline.py  deduplication_pipeline.py  graph_filtering_pipeline.py  metrics_pipeline.py  works_pipeline.py
src/research_graph/processing/: __init__.py  authors.py  paths.py  schemas.py  transforms.py  works.py
src/research_graph/processing/deduplication/: deduplication_worker.py  duplicate_check.py  duplicate_checks.py  id_deduplication.py  id_partitioning.py  key_deduplication.py  partitioning.py  row_deduplication.py  row_partitioning.py  tables_info.py
src/research_graph/processing/graph_filtering/: citation_edges_filter.py  reference_tables_filter.py  relationship_tables_filter.py  seed_concepts.py  work_ids_filter.py  works_filter.py
src/research_graph/processing/ingestion/: authors.py  schemas.py  transforms.py  works.py
src/research_graph/processing/io/: shards.py  writers.py
src/research_graph/processing/metrics/: authors_metrics.py  concepts_metrics.py  institutions_metrics.py  sources_metrics.py  works_metrics.py
src/research_graph/processing/pipelines/: works.py
