[project]
name = "research-graph"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26",
    "botocore>=1.29",
    "pyarrow>=11.0",
    "ftfy>=6.1",
    "pyyaml>=6.0",
    "duckdb>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
research-graph = "research_graph.main:main"